# cloud_env_analyzer_frontend

./: .gitignore  README.md  db.json  index.html  package-lock.json  package.json
backend/: alembic.ini  prompt.docx  prompt_extracted.txt  pyproject.toml  setup.bat  verify_imports.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py  documents.py  jobs.py  reports.py  review.py  scans.py
backend/app/background/: __init__.py  extract_task.py  runner.py  scan_task.py
backend/app/core/: types.py
backend/app/extraction/: __init__.py  graph.py  prompts.py  state.py
backend/app/extraction/nodes/: __init__.py  extract.py  parse.py  validate.py  verify.py
backend/app/extraction/parsers/: __init__.py  docx.py  pdf.py
backend/app/models/: __init__.py  document.py  job.py  prerequisite.py  report.py  review.py  scan_result.py
backend/app/scanner/: __init__.py  base.py  orchestrator.py
backend/app/scanner/providers/: __init__.py  compute.py  database.py  iam.py  kubernetes.py  network.py  quotas.py  security.py  services.py  storage.py
backend/app/validation/: __init__.py  engine.py  evaluators.py
backend/migrations/: env.py
backend/tests/: test_validation.py
src/: App.tsx  index.css  router.tsx
src/api/: client.ts  extraction.ts  jobs.ts  scan.ts  types.ts  validation.ts
src/components/audit/: AuditLog.tsx
src/components/extraction/: DocUploader.tsx  PrereqUploader.tsx  (+2 more)
src/lib/: constants.ts  formatters.ts  theme.ts  utils.ts
src/pages/: Comparison.tsx  Dashboard.tsx  Extraction.tsx  Reports.tsx  Scan.tsx  Settings.tsx  Validation.tsx
src/store/: extractionStore.ts  reviewStore.ts  scanStore.ts  validationStore.ts
(+3 files in other folders)
